# ITER

./: .gitignore  CMakeLists.txt  Experiments.md  README.md  iter_app.sh  iter_task.sh  notes.txt  package.xml  save_log.sh  temp_notes.txt  ui_ip_address.sh
analysis/: .gitignore  Circos-Plots.ipynb  Multimedia_Multitasking_Index.ipynb  RAD.Rmd  RAD_sig_test.ipynb  RAD_table.ipynb  README.md  UIST.Rmd  final.Rmd  interaction_ros_logs.ipynb
ar_track_alvar/: README  README.md
iter/: CMakeLists.txt  README.md  package.xml
iter_app/: CMakeLists.txt  README.md  package.xml  setup.py
iter_moveit/: Kinova.md  README.md
iter_moveit/m1n6s_robotiq85_moveit_config/: CMakeLists.txt  package.xml
iter_moveit/m1n6s_robotiq85_moveit_config/config/: controllers.yaml  controllers_ros_control.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  m1n6s_robotiq85.srdf
iter_moveit/m1n6s_robotiq85_moveit_config/launch/: demo.launch  m1n6s200_gazebo_demo.launch  m1n6s200_virtual_robot_demo.launch  m1n6s_robotiq85_demo.launch  m1n6s_robotiq85_gazebo_demo.launch  m1n6s_robotiq85_virtual_robot_demo.launch  move_group.launch  move_group_m1n6s200.launch  move_group_m1n6s_robotiq85.launch  planning_context.launch  robotiq_85.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
iter_moveit/m1n6s_robotiq85_moveit_config/src/: gripper_action_server.py  joint_remap.py
iter_moveit/m1n6s_robotiq85_moveit_config/urdf/: m1n6s.xacro  m1n6s_robotiq85.xacro  m1n6s_robotiq85_standalone.xacro  robotiq85.xacro  ur5_robotiq_85.urdf.xacro
src/: cli.py  (+4 more)
(+513 files in other folders)
